import UIKit

final class AlertPresenter {
    
    weak var viewController: UIViewController?
    
    init(viewController: UIViewController?) {
        self.viewController = viewController
    }
    
    func show(alertModel: AlertModel) {
        let alert = UIAlertController(
            title: alertModel.title,
            message: alertModel.message,
            preferredStyle: .alert)
        alert.view.accessibilityIdentifier = "Alert"
        let action = UIAlertAction(title: alertModel.buttonText, style: .default, handler: {_ in
            alertModel.completion()
        })
        alert.addAction(action)
        viewController?.present(alert, animated: true, completion: nil)
    }
}
